--- a/src/slides/sample-presentation.mdx
+++ b/src/slides/sample-presentation.mdx
@@ -1,15 +1,11 @@
 export const metadata = {
-  title: 'Marpプレゼンテーションのサンプル',
-  author: 'Unknown',
-  date: ''
-}
-
-import { MDXProvider } from '@mdx-js/react'
-
+  title: "Marpプレゼンテーションのサンプル",
+  author: "git user name",
+};
 
 <div className="slide">
 
-# Marpプレゼンテーションのサンプル
+# Marp プレゼンテーションのサンプル
 
 ## モダンなプレゼンテーションツール
 
@@ -19,12 +15,25 @@ import { MDXProvider } from '@mdx-js/react'
 
 <div className="slide">
 
-## Marpの特徴
+## 自己紹介
 
-- **Markdownベース**: シンプルなMarkdownでスライドを作成
+- **名前**: [あなたの名前]
+- **好きなもの**:
+  - 趣味
+  - 休日の過ごし方
+
+</div>
+
+---
+
+<div className="slide">
+
+## Marp の特徴
+
+- **Markdown ベース**: シンプルな Markdown でスライドを作成
 - **高速**: 素早くスライドを生成・プレビュー
-- **カスタマイズ可能**: CSSでテーマをカスタマイズ
-- **エクスポート**: PDF、HTML、PowerPointに対応
+- **カスタマイズ可能**: CSS でテーマをカスタマイズ
+- **エクスポート**: PDF、HTML、PowerPoint に対応
 
 </div>
 
@@ -34,7 +43,7 @@ import { MDXProvider } from '@mdx-js/react'
 
 ## 使い方
 
-1. Markdownでスライドを書く
+1. Markdown でスライドを書く
 2. `---`で区切る
 3. プレビューで確認
 4. 必要に応じてエクスポート
@@ -46,5 +55,16 @@ function hello() {
   console.log("Hello, Marp!");
 }
 ```
+
+</div>
+
+---
+
+<div className="slide">
+
+## 終わりに
+
+- Marp を使うことで、効率的かつ効果的なプレゼンテーションを簡単に作成することができます
+- AI を絡める事でその難易度はさらに下がるので、ぜひ今後の LT 活動にも有効活用してみてください
 
 </div>
