設定など更新

--- a/src/slides/2025-10-01_asato_tanstack-query-ssr.mdx
+++ b/src/slides/2025-10-01_asato_tanstack-query-ssr.mdx
@@ -9,7 +9,7 @@ export const metadata = {
 
 ## BE リソース削減と FE 表示高速化の実現
 
-<img src="/tanstack.jpeg" alt="TanStack Query" style={{width: "300px", margin: "20px auto", display: "block"}} />
+<img src="/2025-10-01_asato_tanstack-query-ssr/tanstack.jpeg" alt="TanStack Query" style={{width: "300px", margin: "20px auto", display: "block"}} />
 
 </div>
 
