Add profile text

--- a/src/slides/2025-10-03_hikari-tanimoto_hokuto-no-ken-is-love.mdx
+++ b/src/slides/2025-10-03_hikari-tanimoto_hokuto-no-ken-is-love.mdx
@@ -9,7 +9,11 @@ export const metadata = {
 
 ## 本当に伝えたい作品の本質
 
-<img src="/hokuto-no-ken/image9.png" alt="北斗の拳ロゴ" style={{width: "400px", margin: "0 auto", display: "block"}} />
+<img
+  src="/hokuto-no-ken/image9.png"
+  alt="北斗の拳ロゴ"
+  style={{ width: "400px", margin: "0 auto", display: "block" }}
+/>
 
 </div>
 
@@ -19,10 +23,10 @@ export const metadata = {
 
 ## 自己紹介
 
-- **名前**: [あなたの名前]
+- **名前**: たにもと ひかり
 - **好きなもの**:
-  - 趣味
-  - 休日の過ごし方
+  - 趣味：アニメを見る
+  - 休日の過ごし方：畑に苗をうえる
 
 </div>
 
@@ -32,12 +36,16 @@ export const metadata = {
 
 ## 北斗の拳ってどんなアニメ？
 
-- **199X年、世界は核の炎に包まれた**
+- **199X 年、世界は核の炎に包まれた**
 - 荒廃し弱肉強配の世界になった世紀末が舞台
 - 一子相伝の暗殺拳"北斗神拳"の伝承者・ケンシロウの物語
-- 週刊少年ジャンプに1983年～1988年まで連載
+- 週刊少年ジャンプに 1983 年～ 1988 年まで連載
 
-<img src="/hokuto-no-ken/image5.png" alt="世紀末の世界" style={{width: "350px", margin: "0 auto", display: "block"}} />
+<img
+  src="/hokuto-no-ken/image5.png"
+  alt="世紀末の世界"
+  style={{ width: "350px", margin: "0 auto", display: "block" }}
+/>
 
 </div>
 
@@ -53,7 +61,11 @@ export const metadata = {
 - しかし本当のテーマは**「愛」**
 - ケンシロウは「愛と哀しみを背負い」救世主として成長していく
 
-<img src="/hokuto-no-ken/image2.png" alt="愛" style={{width: "300px", margin: "0 auto", display: "block"}} />
+<img
+  src="/hokuto-no-ken/image2.png"
+  alt="愛"
+  style={{ width: "300px", margin: "0 auto", display: "block" }}
+/>
 
 </div>
 
@@ -61,10 +73,12 @@ export const metadata = {
 
 <div className="slide">
 
-## 描かれている3つの愛
+## 描かれている 3 つの愛
 
 ### 1. 婚約者ユリアとの愛
+
 ### 2. 強敵（とも）との愛・絆
+
 ### 3. 義兄弟との愛・絆と別離
 
 </div>
@@ -80,7 +94,11 @@ export const metadata = {
 - 愛する人を守るための戦い
 - 切なく美しいラブストーリー
 
-<img src="/hokuto-no-ken/image7.png" alt="ケンシロウとユリア" style={{width: "350px", margin: "0 auto", display: "block"}} />
+<img
+  src="/hokuto-no-ken/image7.png"
+  alt="ケンシロウとユリア"
+  style={{ width: "350px", margin: "0 auto", display: "block" }}
+/>
 
 </div>
 
@@ -95,7 +113,11 @@ export const metadata = {
 - 「強敵」と書いて「とも」と読む深い意味
 - 命を懸けた戦いの中に生まれる友情
 
-<img src="/hokuto-no-ken/image3.png" alt="強敵との戦い" style={{width: "350px", margin: "0 auto", display: "block"}} />
+<img
+  src="/hokuto-no-ken/image3.png"
+  alt="強敵との戦い"
+  style={{ width: "350px", margin: "0 auto", display: "block" }}
+/>
 
 </div>
 
@@ -110,7 +132,11 @@ export const metadata = {
 - 愛するがゆえの悲しい対立
 - 家族愛の複雑さと美しさ
 
-<img src="/hokuto-no-ken/image1.png" alt="ケンシロウ" style={{width: "350px", margin: "0 auto", display: "block"}} />
+<img
+  src="/hokuto-no-ken/image1.png"
+  alt="ケンシロウ"
+  style={{ width: "350px", margin: "0 auto", display: "block" }}
+/>
 
 </div>
 
